--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@
     
     <div class="video-bg-container">
         <video autoplay muted loop playsinline class="bg-video">
-            <source src="/assets/LONDRES.mp4" type="video/mp4">
+            <source src="/public/assets/canada.mp4" type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
